network manipulations work; it's freaking awesome

--- a/network/main.css
+++ b/network/main.css
@@ -16,3 +16,12 @@ svg {
 table {
   display: inline-block;
 }
+
+.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.highlighted {
+  stroke: #65bcd4;
+}
